<resources>
    <string name="app_name">RightPlaceApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_moradias">Moradias</string>
    <string name="menu_postagens">Postagens</string>
    <string name="menu_perfil">Editar Perfil</string>
    <string name="menu_anuncio_usuario">Minhas moradias</string>
    <string name="menu_postagem_usuario">Minhas postagens</string>
    <string name="menu_nova_moradia">Anúnciar Imovel</string>
    <string name="menu_nova_postagem">Fazer postagem</string>
    <string name="menu_feedback">Nos envie um feedback</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_planos">Seja premium</string>

    <string name="cb_pets">Possui pets?</string>
    <string name="cb_garagem">Tem vaga para garagem?</string>
    <string name="cb_quarto">O quarto é individual?</string>
    <string name="cb_residencia">A residencia é uma casa ?</string>

    <string name="cb_sim">Sim</string>
    <string name="cb_nao">Não</string>

    <string name="tv_pets">Possui pets?</string>
    <string name="tv_garagem">Tem vaga para garagem?</string>
    <string name="tv_quarto">O quarto é individual?</string>
    <string name="tv_residencia">Tipo de residencia</string>


    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Cadastrar-se</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="esquceu_senha">Esqueceu a senha?</string>
    <string name="redes_cadastro">Redes Sociais</string>
    <string name="foto_cadastro">Foto de perfil</string>
    <string name="bt_moradia_cadastro_editar">Editar</string>
    <string name="bt_moradia_cadastro_excluir">Excluir</string>
    <string name="ic_moradores">moradores</string>

    <string name="bt_cadastro_add">Adicionar</string>
    <string name="redes_sociais">Redes Sociais</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>