<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_moradias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_moradias"

            />
        <item
            android:id="@+id/nav_postagens"
            android:icon="@drawable/ic_post"
            android:title="@string/menu_postagens" />

        <item
            android:id="@+id/nav_anuncio_usuario"
            android:icon="@drawable/ic_moradia_usuario"
            android:title="@string/menu_anuncio_usuario"
            />
        <item
            android:id="@+id/nav_postagens_usuario"
            android:icon="@drawable/ic_post_usuario"
            android:title="@string/menu_postagem_usuario"
            />
        <item
            android:id="@+id/nav_novo_anuncio"
            android:icon="@drawable/ic_moradia_add"
            android:title="@string/menu_nova_moradia"
            />
        <item
            android:id="@+id/nav_nova_postagem"
            android:icon="@drawable/ic_nova_postagem"
            android:title="@string/menu_nova_postagem"
            />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_perfil"
            android:iconTint="@color/black"
            />
        <item
            android:id="@+id/nav_planos"
            android:icon="@drawable/ic_plano"
            android:title="@string/menu_planos"
            />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feedback"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"
            />



    </group>


</menu>